...
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="8dp"
                android:src="@drawable/ic_notification_bell"
                android:text="Login"
                android:textColor = "@color/white"
                tools:layout_editor_absoluteX="371dp"
                tools:layout_editor_absoluteY="12dp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
...
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

        <EditText
            android:id="@+id/enterEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/page_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/enterEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="Login"
            android:textColor="#FFFFFF"
...
